# tituloapp-tauri

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  api.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: certificate.rs  database.rs  main.rs  schema.sql  soap.rs
src/components/: Loading.tsx  MenuBar.tsx  PopupMessage.tsx  Schools.tsx  Students.tsx  Welcome.tsx
src/components/Schools/: Degree.tsx  DegreeForm.tsx  DegreeTable.tsx  DegreeTableItem.tsx  Form.tsx  Responsible.tsx  ResponsibleForm.tsx  ResponsibleTable.tsx  ResponsibleTableItem.tsx
src/components/Students/: Edit.tsx  EditChain.tsx  EditFollowup.tsx  EditForm.tsx  Search.tsx  SearchStudentItem.tsx
src/utils/: xmlTools.ts
