[package]
name = "tituloapp-tauri"
version = "0.1.1"
description = "Digital Title App"
authors = ["garciaoyervides"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tituloapp_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.28.0", features = ["bundled"] }
x509-parser = "0.16"
pem = "1.0"
hex = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
chrono = "0.4"
base64 = "0.22"
xml2json-rs = "1.0.1"
reqwest = { version = "0.11", features = ["blocking"] }
quick-xml = "0.31"
